# InventioBackend

./: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: inventio-backend-AutoDeployTrigger-70dbf0b0-6653-4fd3-95ea-d09cf68f07f8.yml  inventiobackend--build-and-deploy.yaml
InventioBackend/: asgi.py  settings.py  urls.py  wsgi.py
app_auth/migrations/: 0001_initial.py
hardware/: filters.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py  viewsets.py
hardware/migrations/: 0001_initial.py  0002_alter_brand_name_alter_category_name_and_more.py  0003_category_category_name_min_length_2_and_more.py  0004_alter_device_serial_number_and_more.py  0005_remove_brand_unique_brand_name_and_more.py  0006_auto_20250502_0906.py  0007_alter_device_added_date.py  0008_rename_brand_id_device_brand_and_more.py  0009_alter_device_year_of_production.py
inventio_auth/: __init__.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
inventio_auth/migrations/: 0001_initial.py  0002_role_role_name_worker_or_technician.py  0003_alter_account_name_alter_account_surname_and_more.py  0004_remove_account_surname_min_length_2_and_only_letters_and_more.py
inventio_backend/: .env.example  asgi.py  middleware.py  settings.py  settings.py~  urls.py  wsgi.py
shared/: __init__.py  enums.py  filters.py  permissions.py  validators.py
stocktaking/: filters.py  models.py  serializers.py  urls.py  viewsets.py
stocktaking/migrations/: 0001_initial.py  (+3 more)
(+13 files in other folders)
