[project]
name = "inventiobackend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.5.0",
    "djangorestframework-stubs>=3.16.0",
    "drf-spectacular>=0.28.0",
    "markdown>=3.8",
    "pip>=25.1.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "python-decouple>=3.8",
    "tzdata>=2025.2",
    "gunicorn>=21.2.0",
]
